[XForms] Repeat index() doesnt reset to 0 when last repeat item is deleted. Bug 334015, r=smaug+aaronr. Also fixes bug 318779.